--- a/index.html
+++ b/index.html
@@ -9,6 +9,23 @@
 		<link rel="stylesheet" href="style.css" />
 	</head>
 	<body>
+		<div class="quote-container" id="quote-container">
+			<!-- Quote  -->
+			<div class="quote-text">
+				<i class="fa-solid fa-quote-left"></i>
+				<span id="quote">What you are is what you have been. What you'll be is what you do now.</span>
+			</div>
+			<!-- Author -->
+			<div class="quote-author">
+				<span id="author">Buddha</span>
+			</div>
+			<!-- Buttons -->
+			<div class="button-container">
+				<button class="x-button" id="x" title="Share on X!">
+					<i class="fa-brands fa-x-twitter"></i></button
+				><button id="new-quote">New Quote</button>
+			</div>
+		</div>
 		<!-- Script -->
 		<script src="script.js"></script>
 	</body>
